XMLtoCSV/objects/unpackaged/objects/Environment_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used to capture Environment details for each Veeva Org.</description>
    <fields>
        <fullName>Admin_Seats_vod__c</fullName>
        <label>Admin Seats</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Refresh_Date_vod__c</fullName>
        <label>Last Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Refresh_Date_vod__c</fullName>
        <label>Next Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes_vod__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Seats_vod__c</fullName>
        <label>Platform Seats</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Org_ID_vod__c</fullName>
        <label>SFDC Org ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>